Staging work before testing modifications